--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "load-script2": "^1.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "standard": "*"
   },
   "homepage": "https://github.com/feross/yt-player",
@@ -37,6 +39,7 @@
     "url": "git://github.com/feross/yt-player.git"
   },
   "scripts": {
-    "test": "standard"
+    "test": "standard",
+    "transpile": "babel src/index.js --out-file index.js"
   }
 }
